summary age limit, 5xx errors logging
